--- a/index.html
+++ b/index.html
@@ -210,6 +210,6 @@
       <li><a href="https://github.com/dhsngochongxi">Ngo Chong Xi 2C</a></li>
       <li><a href="https://github.com/dhsongyingfeivienna">Ong Ying Fei Vienna 2C</a></li>
       <li><a href="https://github.com/dhsruiyiteo">Teo Rui Yi 2A</a></li>
-    </ol>
+        <li><a href="https://github.com/dhsethantan">Tan Ming Kai Ethan 2F</a></li>
   </body>
 </html>
